force-app/main/default/objects/ProdTechRefDetails__c/ProdTechRefDetails__c.object-meta.xml
<CustomObject>
    <label>Prod Tech Ref Details</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prod Tech Ref Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>