force-app/main/default/objects/ProdTechRefDetails__c/fields/ProdTechRef__c.field-meta.xml
<CustomField>
    <fullName>ProdTechRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProdTechRef</label>
    <referenceTo>ProdTechRef__c</referenceTo>
    <relationshipLabel>Prod Tech Ref Details</relationshipLabel>
    <relationshipName>Prod_Tech_Ref_Details</relationshipName>
    <type>Lookup</type>
</CustomField>